Total prices amount calculated.

--- a/PriceCalculation.Tests/PriceCalculation.Tests.csproj
+++ b/PriceCalculation.Tests/PriceCalculation.Tests.csproj
@@ -48,14 +48,17 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Basket.cs" />
     <Compile Include="CalculationTests.cs" />
-    <Compile Include="Calculator.cs" />
-    <Compile Include="Product.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\PriceCalculation\PriceCalculation.csproj">
+      <Project>{8973de1f-e3fe-4518-9de1-66508ecc79ee}</Project>
+      <Name>PriceCalculation</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
