--- a/PriceCalculation/PriceCalculation.csproj
+++ b/PriceCalculation/PriceCalculation.csproj
@@ -42,6 +42,11 @@
   <ItemGroup>
     <Compile Include="Basket.cs" />
     <Compile Include="Calculator.cs" />
+    <Compile Include="ICalculator.cs" />
+    <Compile Include="IOffer.cs" />
+    <Compile Include="IOfferFactory.cs" />
+    <Compile Include="Offer.cs" />
+    <Compile Include="OfferFactory.cs" />
     <Compile Include="Product.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
