checkout class added to know products count & total prices

--- a/PriceCalculation/PriceCalculation.csproj
+++ b/PriceCalculation/PriceCalculation.csproj
@@ -42,6 +42,7 @@
   <ItemGroup>
     <Compile Include="Basket.cs" />
     <Compile Include="Calculator.cs" />
+    <Compile Include="Checkout.cs" />
     <Compile Include="ICalculator.cs" />
     <Compile Include="IOffer.cs" />
     <Compile Include="IOfferFactory.cs" />
